--- a/app/views/contacts/people/_view.html.haml
+++ b/app/views/contacts/people/_view.html.haml
@@ -16,4 +16,4 @@
       %p
         %strong= @row.class.human_attribute_name(:note)+":"
         %br
-        = @row.note
+        = parse_text @row.note
