--- a/app/views/projects/projects/_form_fields.html.haml
+++ b/app/views/projects/projects/_form_fields.html.haml
@@ -3,10 +3,12 @@
   .row
     .span5
       = form.labeled_input :title, :text_field, :class => 'input-block-level input-label'
-      = form.labeled_input :description, :text_area
       = form.labeled_input :manager
+      = form.labeled_input :status_id, :domain_field, :domain => Projects::Status
     .span5
       / = form.labeled_input :start_date, :date_field
       / = form.labeled_input :end_date, :date_field
-      = form.labeled_input :status_id, :domain_field, :domain => Projects::Status
       = render 'form_colaborators', :form => form
+  .row
+    .span10
+      = form.labeled_input :description, :text_area
