--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -5,6 +5,9 @@
   background: #F5F5F5;
   margin-bottom: 20px;
   z-index: 1;
+  -moz-box-shadow: 0px -5px 16px gray;
+  -webkit-box-shadow: 0px -5px 16px gray;
+  box-shadow: 0px -5px 16px gray;
 }
 .action-buttons {
   padding-top: 14px;
