--- a/app/assets/stylesheets/projects/projects.css.scss
+++ b/app/assets/stylesheets/projects/projects.css.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the projects::projects controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+li.li-tasks .description {
+  display: none;
+  border-top: 1px solid #BCE8F1;
+  color: gray;
+}
+
+li.li-tasks i.icon-chevron-down,
+li.li-tasks i.icon-chevron-up {
+  cursor: pointer;
+}
