--- a/app/views/crud/application/_form_fields.html.haml
+++ b/app/views/crud/application/_form_fields.html.haml
@@ -1,6 +1,6 @@
 - form_fields do |field|
-  .control-group
-    = form.label field[:name], :class => 'control-label'
+  %div{:class => 'control-group control-group-'+field[:name].to_s}
+    = form.label field[:name], :class => 'control-label' 
     .controls
       - if field[:name].to_s == @row.class.label_field.to_s
         = form.send field[:widget], field[:name], :class => 'input-label'
