Add fixtures to projects

--- a/app/views/projects/projects/_form_fields.html.haml
+++ b/app/views/projects/projects/_form_fields.html.haml
@@ -12,3 +12,6 @@
   .row
     .span10
       = form.labeled_input :description, :text_area
+  .row
+    .span10
+      = form.nested_resource :fixtures
