--- a/app/assets/stylesheets/projects/projects.css.scss
+++ b/app/assets/stylesheets/projects/projects.css.scss
@@ -2,6 +2,10 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+table.projects_tasks ul {
+  margin: 0;
+}
+
 .div-tasks .description {
   display: none;
   border-top: 1px solid;
@@ -19,8 +23,13 @@
 
 .div-tasks.alert {
   margin-bottom: 8px;
+  padding: 8px;
+  text-shadow: none;
 }
 
+.view-projects_project ul.projects_tasks {
+  min-height: 300px;
+}
 .view-projects_project ul.projects_tasks li {
   list-style: none;
 }
