--- a/app/views/projects/tasks/_form_fields.html.haml
+++ b/app/views/projects/tasks/_form_fields.html.haml
@@ -4,6 +4,7 @@
       = form.labeled_input :title
       = form.labeled_input :description, :text_area
       = form.labeled_input :responsible_id, :domain_field, :domain => @colaborators, :include_blank => true
+      = form.labeled_input :fixture_id, :domain_field, :domain => @fixtures, :include_blank => true
     .span5
       = form.labeled_input :estimated_time
       = form.labeled_input :real_time
