Change time to effort on tasks. Set permission to change_manager of project.

--- a/app/views/projects/projects/_form_fields.html.haml
+++ b/app/views/projects/projects/_form_fields.html.haml
@@ -3,7 +3,10 @@
   .row
     .span6
       = form.labeled_input :title, :text_field, :class => 'input-block-level input-label'
-      = form.labeled_input :manager
+      - if can? :change_manager, @row
+        = form.labeled_input :manager
+      - else
+        = form.hidden_field :manager
       = form.labeled_input :status_id, :domain_field, :domain => Projects::Status
     .span6
       / = form.labeled_input :start_date, :date_field
