--- a/app/views/projects/tasks/_form_fields.html.haml
+++ b/app/views/projects/tasks/_form_fields.html.haml
@@ -6,6 +6,6 @@
       = form.labeled_input :responsible_id, :domain_field, :domain => @colaborators, :include_blank => true
       = form.labeled_input :fixture_id, :domain_field, :domain => @fixtures, :include_blank => true
     .span6
-      = form.labeled_input :estimated_time
-      = form.labeled_input :real_time
+      = form.labeled_input :estimated_effort
+      = form.labeled_input :real_effort
       = form.labeled_input :task_status_id, :domain_field, :domain => Projects::TaskStatus.order(:percent)
